@@ -1,3 +1,11 @@
+2009-09-23  Jie Zhang  <jie.zhang@analog.com>
+
+	* elf32-bfin.c (_bfinfdpic_size_got_plt): Make sure empty
+	.rel.plt and .plt sections are removed.
+	(elf32_bfinfdpic_size_dynamic_sections): Remove empty .dynbss
+	section.  Remove the duplicated removing of empty .rel.plt
+	section.
+
 2009-09-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-ppc.c (TLS_GET_ADDR_GLINK_SIZE): Define.
